// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculator-component should focus newly added party's name input 1`] = `
<div>
  <form
    autocomplete="off"
    class="form"
  >
    <div
      class="mainSettings"
    >
      <div
        aria-labelledby="main-settings-label"
        class="fieldset"
        role="group"
      >
        <div
          class="legend"
          id="main-settings-label"
        >
          Main settings
        </div>
        <div
          class="inputs"
        >
          <div
            class="container"
          >
            <label
              class="label number"
            >
              <div
                class="labelText"
              >
                Seats
              </div>
              <input
                aria-invalid="false"
                class="input"
                name="seats"
                type="number"
                value="100"
              />
            </label>
            <div
              aria-live="polite"
              class="error"
              hidden=""
              id="seats-error-0"
            />
          </div>
          <div
            class="container"
          >
            <label
              class="label number"
            >
              <div
                class="labelText"
              >
                Treshold
              </div>
              <input
                aria-invalid="false"
                class="input"
                name="treshold"
                type="number"
                value="0"
              />
            </label>
            <div
              aria-live="polite"
              class="error"
              hidden=""
              id="treshold-error-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="parties"
    >
      <fieldset
        class="fieldset"
        style="border-color: hsl(0, 75%, 60%);"
      >
        <legend
          class="srOnly"
        >
          party 0
        </legend>
        <div
          class="container"
        >
          <div
            class="input"
          >
            <div
              class="container"
            >
              <label
                class="label undefined"
              >
                <div
                  class="labelText"
                >
                  Party name
                </div>
                <input
                  aria-invalid="false"
                  class="input"
                  data-partystart="0"
                  name="party name"
                  value="Red"
                />
              </label>
              <div
                aria-live="polite"
                class="error"
                hidden=""
                id="party name-error-2"
              />
            </div>
          </div>
          <div
            class="icons"
          >
            <button
              aria-label="delete party"
              class="deleteButton"
              type="button"
            >
              <div
                class="crossIcon"
              />
            </button>
          </div>
          <div
            class="input"
          >
            <div
              class="container"
            >
              <label
                class="label number"
              >
                <div
                  class="labelText"
                >
                  Votes
                </div>
                <input
                  aria-invalid="false"
                  class="input"
                  name="votes"
                  type="number"
                  value="100"
                />
              </label>
              <div
                aria-live="polite"
                class="error"
                hidden=""
                id="votes-error-3"
              />
            </div>
          </div>
          <div
            class="input"
          >
            <div
              class="container"
            >
              <label
                class="label checkbox"
              >
                <div
                  class="labelText"
                >
                  Ignores treshold
                </div>
                <input
                  aria-invalid="false"
                  class="input"
                  name="ignores-treshold"
                  type="checkbox"
                  value=""
                />
              </label>
              <div
                aria-live="polite"
                class="error"
                hidden=""
                id="ignores-treshold-error-4"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="fieldset"
        style="border-color: hsl(110, 75%, 60%);"
      >
        <legend
          class="srOnly"
        >
          New party
        </legend>
        <button
          class="addParty"
          type="button"
        >
          New party
        </button>
      </fieldset>
    </div>
  </form>
</div>
`;

exports[`calculator-component should focus newly added party's name input 2`] = `
<div>
  <form
    autocomplete="off"
    class="form"
  >
    <div
      class="mainSettings"
    >
      <div
        aria-labelledby="main-settings-label"
        class="fieldset"
        role="group"
      >
        <div
          class="legend"
          id="main-settings-label"
        >
          Main settings
        </div>
        <div
          class="inputs"
        >
          <div
            class="container"
          >
            <label
              class="label number"
            >
              <div
                class="labelText"
              >
                Seats
              </div>
              <input
                aria-invalid="false"
                class="input"
                name="seats"
                type="number"
                value="100"
              />
            </label>
            <div
              aria-live="polite"
              class="error"
              hidden=""
              id="seats-error-0"
            />
          </div>
          <div
            class="container"
          >
            <label
              class="label number"
            >
              <div
                class="labelText"
              >
                Treshold
              </div>
              <input
                aria-invalid="false"
                class="input"
                name="treshold"
                type="number"
                value="0"
              />
            </label>
            <div
              aria-live="polite"
              class="error"
              hidden=""
              id="treshold-error-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="parties"
    >
      <fieldset
        class="fieldset"
        style="border-color: hsl(0, 75%, 60%);"
      >
        <legend
          class="srOnly"
        >
          party 0
        </legend>
        <div
          class="container"
        >
          <div
            class="input"
          >
            <div
              class="container"
            >
              <label
                class="label undefined"
              >
                <div
                  class="labelText"
                >
                  Party name
                </div>
                <input
                  aria-invalid="false"
                  class="input"
                  data-partystart="0"
                  name="party name"
                  value="Red"
                />
              </label>
              <div
                aria-live="polite"
                class="error"
                hidden=""
                id="party name-error-2"
              />
            </div>
          </div>
          <div
            class="icons"
          >
            <button
              aria-label="delete party"
              class="deleteButton"
              type="button"
            >
              <div
                class="crossIcon"
              />
            </button>
          </div>
          <div
            class="input"
          >
            <div
              class="container"
            >
              <label
                class="label number"
              >
                <div
                  class="labelText"
                >
                  Votes
                </div>
                <input
                  aria-invalid="false"
                  class="input"
                  name="votes"
                  type="number"
                  value="100"
                />
              </label>
              <div
                aria-live="polite"
                class="error"
                hidden=""
                id="votes-error-3"
              />
            </div>
          </div>
          <div
            class="input"
          >
            <div
              class="container"
            >
              <label
                class="label checkbox"
              >
                <div
                  class="labelText"
                >
                  Ignores treshold
                </div>
                <input
                  aria-invalid="false"
                  class="input"
                  name="ignores-treshold"
                  type="checkbox"
                  value=""
                />
              </label>
              <div
                aria-live="polite"
                class="error"
                hidden=""
                id="ignores-treshold-error-4"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="fieldset"
        style="border-color: hsl(110, 75%, 60%);"
      >
        <legend
          class="srOnly"
        >
          party 1
        </legend>
        <div
          class="container"
        >
          <div
            class="input"
          >
            <div
              class="container"
            >
              <label
                class="label undefined"
              >
                <div
                  class="labelText"
                >
                  Party name
                </div>
                <input
                  aria-invalid="false"
                  class="input"
                  data-partystart="1"
                  name="party name"
                  value="Green"
                />
              </label>
              <div
                aria-live="polite"
                class="error"
                hidden=""
                id="party name-error-5"
              />
            </div>
          </div>
          <div
            class="icons"
          >
            <button
              aria-label="delete party"
              class="deleteButton"
              type="button"
            >
              <div
                class="crossIcon"
              />
            </button>
          </div>
          <div
            class="input"
          >
            <div
              class="container"
            >
              <label
                class="label number"
              >
                <div
                  class="labelText"
                >
                  Votes
                </div>
                <input
                  aria-invalid="false"
                  class="input"
                  name="votes"
                  type="number"
                  value="110"
                />
              </label>
              <div
                aria-live="polite"
                class="error"
                hidden=""
                id="votes-error-6"
              />
            </div>
          </div>
          <div
            class="input"
          >
            <div
              class="container"
            >
              <label
                class="label checkbox"
              >
                <div
                  class="labelText"
                >
                  Ignores treshold
                </div>
                <input
                  aria-invalid="false"
                  class="input"
                  name="ignores-treshold"
                  type="checkbox"
                  value=""
                />
              </label>
              <div
                aria-live="polite"
                class="error"
                hidden=""
                id="ignores-treshold-error-7"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="fieldset"
        style="border-color: hsl(220, 75%, 60%);"
      >
        <legend
          class="srOnly"
        >
          New party
        </legend>
        <button
          class="addParty"
          type="button"
        >
          New party
        </button>
      </fieldset>
    </div>
  </form>
</div>
`;
